# pycxx-native-engine

./: CMakeLists.txt  Makefile  README.md  setup.py
bindings/: bindings.cpp  pybind_module.cpp
cppsrc/: wrapper.cpp  wrapper.hpp
csrc/: algo.c  algo.h
examples/: usage.py
pyc_accelerator/: __init__.py
tests/: test_checksum.py
